@@ -57,4 +57,10 @@ void NormLinker::update() {
     return;
 }
 
+NormLinker* NormLinker::clone() const {
+	NormLinker* newclone = new NormLinker( this->from(), this->to(), name() );
+	newclone->setMatrix( this->matrix() );
+	return newclone;
+}
+
 }
