@@ -15,6 +15,13 @@ S <mave> comment goes here
     'C' : means that something has been changed (e.g. implementation of a Class or a signature method)
 ==== End of Legend ====
 
+    ==> 238 - 3/12/2007 <==
+
++ <mave> Propertized and all its subclasses are now clonable via clone() method
++ <mave> added const versions of Cluster::inputs and ::outputs methods
+C <mave> Cluster::isAccumulate and ::getFunction now are const methods as suppose to be
+C <mave> Updatable::name now is a const method as suppose to be
+
     ==> 236 - 29/10/2007 <==
 
 C <mave> scale, square, normalize, neg and step RealVec methods now returns a reference to itself
